--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "alova": "^3.2.7",
     "axios": "^1.7.9",
+    "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@iconify-json/fa-solid": "^1.2.1",
     "@iconify-json/ic": "^1.2.1",
     "@unocss/preset-icons": "^0.65.1",
     "@unocss/reset": "^0.65.1",
