--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "alova": "^3.2.7",
     "axios": "^1.7.9",
+    "nprogress": "^0.2.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@iconify-json/fa-solid": "^1.2.1",
     "@iconify-json/ic": "^1.2.1",
+    "@types/nprogress": "^0.2.3",
     "@unocss/preset-icons": "^0.65.1",
     "@unocss/reset": "^0.65.1",
     "@vitejs/plugin-vue": "^5.2.1",
