--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@iconify-json/fa-solid": "^1.2.1",
     "@iconify-json/ic": "^1.2.1",
+    "@types/node": "^22.10.2",
     "@types/nprogress": "^0.2.3",
     "@unocss/preset-icons": "^0.65.1",
     "@unocss/reset": "^0.65.1",
